apps/greenstar/app/backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
  name: greenstar-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: backend
  name: greenstar-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: backend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend
    spec:
      containers:
        - image: ghcr.io/arik-kfir/greenstar/backend:046ae41
          name: backend
          startupProbe:
            httpGet:
              port: http
              path: /healthz
            failureThreshold: 6
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              port: http
              path: /healthz
            failureThreshold: 3
            periodSeconds: 3
            terminationGracePeriodSeconds: 10
            timeoutSeconds: 1
          ports:
            - containerPort: 8000
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 16Mi
      enableServiceLinks: false
      serviceAccountName: greenstar-backend
