apps/greenstar/app/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: frontend
  name: greenstar-frontend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: frontend
  name: greenstar-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - image: ghcr.io/arik-kfir/greenstar/frontend
          name: frontend
          startupProbe:
            httpGet:
              port: http
              path: /index.html
            failureThreshold: 6
            periodSeconds: 10
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              port: http
              path: /index.html
            failureThreshold: 3
            periodSeconds: 3
            terminationGracePeriodSeconds: 10
            timeoutSeconds: 1
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 128Gi
            requests:
              cpu: 200m
              memory: 64Mi
      enableServiceLinks: false
      serviceAccountName: frontend
