apps/greenstar/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: greenstar
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`greenstar.${env}.kfirs.com`) && (PathPrefix(`/auth`) || PathPrefix(`/api`))
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      services:
        - name: greenstar-backend
          port: http
          kind: Service
    - kind: Rule
      match: Host(`greenstar.${env}.kfirs.com`) && !PathPrefix(`/auth`) && !PathPrefix(`/api`)
      middlewares:
        - name: ip-whitelist
          namespace: traefik
      services:
        - name: greenstar-frontend
          port: http
          kind: Service
  tls:
    secretName: greenstar-kfirs-com-tls
